# csv_heightmap_parser

./: .gitignore  README.md
c_parser/: CMakeLists.txt
c_parser/include/: ANSI_colors.h  arg_parse.h  buffer_util.h  custom_dtypes.h  file_identificator.h  utils.h  win_err_status_numbers.h
c_parser/src/: arg_parse.c  benchmark.c  buffer_util.c  c_parser.c  file_identificator.c  parser.c  print_info.c  utils.c
c_parser/test/: test_file_identificator.c
examples/: example_config.toml  main.py
